@@ -6,12 +6,6 @@ import java.util.Map;
 
 public interface DataStore {
 
-	boolean isDeviceIdentifierGenerated();
-	
-	String getDeviceIdentifier();
-	
-	void saveDeviceIdentifier(String identifier);
-	
 	boolean isDeviceRegistered();
 	
 	void register(Device device);
