@@ -6,7 +6,6 @@ sync.interval.seconds=30
 
 sync.remoteHost=localhost
 sync.remotePort=22
-sync.remoteUser=jedi
 sync.keyLocation=../data/
 
 sync.inbox.localDir=../data/client/inbox
